resolve bleed in focus state on some navigation items

--- a/src/lbcamden/components/header/includes/_navigation-items.scss
+++ b/src/lbcamden/components/header/includes/_navigation-items.scss
@@ -151,7 +151,7 @@
     outline: 3px solid transparent;
     color: #0b0c0c;
     background-color: $govuk-focus-colour;
-    box-shadow: 0 -2px $govuk-focus-colour, 0 4px lbcamden-colour("black");
+    box-shadow: none;
     text-decoration: none;
   }
 
